objects/fcio1__GTM__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Expression__c</fullName>
        <label>Expression</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fcio1__GTM_Type__c</fullName>
        <label>GTM Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__L10_Name__c</fullName>
        <label>L10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__L10__c</fullName>
        <label>L10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__L11_Name__c</fullName>
        <label>L11 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__L11__c</fullName>
        <label>L11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__L12_Name__c</fullName>
        <label>L12 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__L12__c</fullName>
        <label>L12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Node_Level__c</fullName>
        <label>Node Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fullcast GTM</label>
    <listViews>
        <fullName>fcio1__All_GTMs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All GTMs</label>
    </listViews>
    <nameField>
        <label>GTM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>